@@ -8,7 +8,7 @@ bindir="@bindir@"
 datarootdir="@datarootdir@"
 datadir="@datadir@"
 if [ "x$pkgdatadir" = x ]; then
-    pkgdatadir="${datadir}/@PACKAGE_TARNAME@"
+    pkgdatadir="${datadir}/@PACKAGE@"
 fi
 
 grub_mklayout="${bindir}/`echo grub-mklayout | sed ${transform}`"
